# simple_path_tracer

./: CMakeLists.txt  azure-pipelines.yml
examples/: CMakeLists.txt  example_base.cpp  example_base.h  minimal.cpp
rt/: CMakeLists.txt  rt.cpp  rt.h  rt.hpp
